2004-11-08 Mikhail Khodjaiants
	Added the "Automatically refresh registers" and "Automatically refresh shared libraries"
	preferences and properties.
	* ActionFilterAdapterFactory.java: new
	* GDBTargetActionFilter.java: new
	* PreferenceMessages.properties
	* MIPreferencePage.java
	* org.eclipse.cdt.debug.mi.internal.ui.propertypages: new package
	* PropertyMessages.properties
	* OptionsPropertyPage.java
	* PropertyMessages.java
	* plugin.properties
	* plugin.xml

2004-10-29 Alain Magloire
	Changes to the CDI interface
	* SeAutoSolibActionDelegate.java

2004-08-23 Mikhail Khodjaiants
	Added API to allow the access to the internal MI UI components by client plugins.
	Changed the "Solib search path" component.
	Reformatting and cleanup.
	* MIUIMessages.properties
	* CygwinDebuggerPage.java
	* GDBDebuggerPage.java
	* GDBServerDebuggerPage.java
	* GDBSolibBlock.java
	* IMIHelpContextIds.java
	* IMILaunchConfigurationComponent.java: new
	* IMIUIConstants.java
	* IPathProvider.java: new
	* MIUIUtils.java: new
	* PixelConverter.java
	* SerialPortSettingsBlock.java
	* SolibSearchPathBlock.java
	* TCPSettingsBlock.java
	* SetAutoSolibActionDelegate.java
	* MIPreferencePage.java

2004-07-14 Mikhail Khodjaiants
	Wrong fix. Falling back.
	* GDBSolibBlock.java

2004-07-14 Alain Magloire

	Wrong call the to the Button widget it should have been
	setSelection() not setEnabled()

	* src/org/eclipse/cdt/debug/mi/internal/ui/GDBSolibBlock.java

2004-07-02 Mikhail Khodjaiants
	Fix for bug 68934: Debug into dll doesn't work.
	The "solib-search-path" and "stop-on-solib-events" options are not supported by gdb on CygWin.
	Removed the "Shared Libraries" tab from the "Debugger" page of the laaunch configuration dialog
	for the "CygWin Debugger" type.
	* CygwinDebuggerPage.java

2004-06-22 Mikhail Khodjaiants
	Replaced global resource bundles by messages.

2004-06-21 Mikhail Khodjaiants
	Fix for bug 60872. Accessibility: Run/Debug configuration dialog has duplicate mnemonics.